Corrections and animations

--- a/blog-detail.html
+++ b/blog-detail.html
@@ -10,8 +10,8 @@
 </head>
 
 <body class="">
-    <nav class="">
-        <div class="container mx-auto max-w-6xl px-5 md:px-10 py-5 md:py-7 flex items-center justify-between gap-10">
+    <nav class="fixed w-full bg-white z-[1000]">
+        <div class="container mx-auto max-w-6xl px-5 md:px-10 py-5 flex items-center justify-between gap-10">
             <img src="./assets/images/logo wide.png" alt="DgnRavePay Logo" class="h-20">
             <div class="hidden lg:flex flex-1 items-center justify-between">
                 <div class="bg-primary/70 rounded-full p-1">
@@ -33,10 +33,10 @@
         </div>
     </nav>
 
-    <div class="container mx-auto max-w-6xl px-5 md:px-10 pb-10 md:mt-10">
+    <div class="container mx-auto max-w-6xl px-5 md:px-10 pb-10 pt-40">
         <div class="text-center text-xs md:text-sm">Freelancer • <span class="text-stone-400">August 15, 2025</span>
         </div>
-        <h1 class="text-3xl md:text-4xl font-bold text-center my-10">
+        <h1 class="leading-[1.2] font-bold text-center my-10">
             Global accounts vs traditional banks: What remote workers should know
         </h1>
         <img src="./assets/images/article 2.jpg" alt="" class="w-full rounded-xl apect-video mb-10 object-cover">
@@ -57,7 +57,7 @@
                     <span>Post</span>
                 </a>
             </div>
-            <div class="col-span-5 mt-10">
+            <div class="col-span-7 mt-10">
                 <div class="mb-10">
                     <p class="">
                         Remote workers often earn from clients and employers across different countries, creating the
