--- a/blog.html
+++ b/blog.html
@@ -11,8 +11,8 @@
 <body>
     <!-- HERO -->
     <section class="min-h-screen relative">
-        <nav class="">
-            <div class="container mx-auto max-w-6xl px-5 md:px-10 mb-10 py-7 flex items-center justify-between gap-10">
+        <nav class="fixed bg-white z-[10000] w-full">
+            <div class="container mx-auto max-w-6xl px-5 md:px-10 py-5 flex items-center justify-between gap-10">
                 <img src="./assets/images/logo wide.png" alt="DgnRavePay Logo" class="h-20">
                 <div class="hidden lg:flex flex-1 items-center justify-between">
                     <div class="bg-primary/70 rounded-full p-1">
@@ -33,12 +33,12 @@
                 </div>
             </div>
         </nav>
-        <div>
+        <div class="pt-40">
             <div class="container mx-auto max-w-6xl px-5 md:px-10 md:grid md:grid-cols-5 md:gap-5">
                 <div class="md:col-span-3">
                     <span class="uppercase text-xs md:text-sm">STAY UP TO DATE</span>
                     <h1
-                        class="mt-5 capitalize leading-[1.2] mb-5 mb-5 text-5xl md:text-6xl lg:text-[74px] leading-[1] bg-clip-text text-transparent bg-gradient-to-r from-black to-primary">
+                        class="mt-5 capitalize leading-[1.2] mb-5 mb-5 bg-clip-text text-transparent bg-gradient-to-r from-black to-primary">
                         The DgnRavePay Blog
                     </h1>
                     <p class="text-base md:text-lg">Dive into our latest product updates, user interviews, finance tips,
