--- a/business.html
+++ b/business.html
@@ -11,8 +11,8 @@
 <body>
     <!-- HERO -->
     <section class="min-h-screen relative">
-        <nav class="">
-            <div class="container mx-auto max-w-6xl px-5 md:px-10 mb-10 py-7 flex items-center justify-between gap-10">
+        <nav class="fixed bg-white z-[10000] w-full">
+            <div class="container mx-auto max-w-6xl px-5 md:px-10 py-5 flex items-center justify-between gap-10">
                 <img src="./assets/images/logo wide.png" alt="DgnRavePay Logo" class="h-20">
                 <div class="hidden lg:flex flex-1 items-center justify-between">
                     <div class="bg-primary/70 rounded-full p-1">
@@ -33,11 +33,10 @@
                 </div>
             </div>
         </nav>
-        <div>
+        <div class="pt-40">
             <div class="container mx-auto max-w-6xl px-5 md:px-10">
                 <div class="text-center mb-10">
-                    <h1
-                        class="capitalize leading-[1.2] mb-5 text-center mb-5 text-5xl md:text-6xl lg:text-[74px] leading-[1]">
+                    <h1 class="capitalize leading-[1.2] mb-5 text-center mb-5">
                         Simplify Business Banking.
                         Accelerate Growth
                     </h1>
@@ -81,7 +80,7 @@
                             </h6>
                             <div class="mt-6 lg:mt-8">
                                 <div>
-                                    <h3 class="mb-3 text-3xl md:text-5xl lg:text-[48px] leading-[1]">
+                                    <h3 class="mb-3 leading-[1]">
                                         Business Accounts
                                         Built for Growth
                                     </h3>
@@ -120,7 +119,7 @@
                             </h6>
                             <div class="mt-6 lg:mt-8">
                                 <div>
-                                    <h3 class="mb-3 text-3xl md:text-5xl lg:text-[48px] leading-[1]">Sell. Track. Grow.
+                                    <h3 class="mb-3 leading-[1]">Sell. Track. Grow.
                                         All in One</h3>
                                     <p>Request, assign, and control multiple POS
                                         devices with advanced monitoring and fraud
@@ -156,7 +155,7 @@
                                 VIRTUAL CARD
                             </h6>
                             <div class="mt-6 md:mt-8">
-                                <h3 class="mb-3 text-3xl md:text-5xl lg:text-[48px] leading-[1]">
+                                <h3 class="mb-3 leading-[1]">
                                     Pay Globally, Securely. Anytime.
                                 </h3>
                                 <p>
@@ -191,7 +190,7 @@
                                 BUSINESS LOAN
                             </h6>
                             <div class="mt-6 md:mt-8">
-                                <h3 class="mb-3 text-3xl md:text-5xl lg:text-[48px] leading-[1]">
+                                <h3 class="mb-3 leading-[1]">
                                     Fuel Growth with Fast,
                                     Flexible Credit
                                 </h3>
@@ -235,7 +234,7 @@
                             </h6>
                             <div class="mt-6 lg:mt-8">
                                 <div>
-                                    <h3 class="mb-3 text-3xl md:text-5xl lg:text-[48px] leading-[1]">
+                                    <h3 class="mb-3 leading-[1]">
                                         Get Paid Faster. Look
                                         More Professional.
                                     </h3>
@@ -276,7 +275,7 @@
                             </h6>
                             <div class="mt-6 lg:mt-8">
                                 <div>
-                                    <h3 class="mb-3 text-3xl md:text-5xl lg:text-[48px] leading-[1]">
+                                    <h3 class="mb-3 leading-[1]">
                                         Run Payroll, Payslips
                                         & Compliance in
                                         Minutes
@@ -317,10 +316,10 @@
     <section class="bg-accent-black">
         <div class="container mx-auto max-w-6xl px-5 md:px-10 md:grid md:grid-cols-2">
             <div class="pt-20 pb-10 md:py-28 flex flex-col justify-center">
-                <h3 class="text-white mb-5 text-3xl md:text-5xl lg:text-[48px] leading-[1]">
+                <h2 class="text-white mb-5 text-3xl md:text-5xl lg:text-[48px] leading-[1]">
                     Do more with your
                     Business Account
-                </h3>
+                </h2>
                 <p class="text-white">Your lifestyle companion for smart payments, instant gifting, seamless travel, and
                     hassle-free bill management.</p>
                 <div class="mt-10">
@@ -411,9 +410,9 @@
             <!-- JOIN SECTION -->
             <div class="md:grid md:grid-cols-5 md:gap-20">
                 <div class="md:col-span-3">
-                    <h2 class="mb-2 text-center md:text-left text-4xl md:text-5xl lg:text-[62px] leading-[1]">Join
+                    <h2 class="mb-2 text-center md:text-left leading-[1]">Join
                         DgnRavePay in 2 Minutes or Less</h2>
-                    <p class="text-center md:tet-left">No queues. No paperwork. Just you, your phone, and a few taps to
+                    <p class="text-center md:text-left">No queues. No paperwork. Just you, your phone, and a few taps to
                         financial freedom.</p>
                     <ul class="mt-3 max-w-2xl">
                         <li class="flex items-center px-5 py-5 rounded-xl gap-3">
