--- a/career.html
+++ b/career.html
@@ -11,8 +11,8 @@
 <body>
     <!-- HERO -->
     <section class="min-h-screen relative">
-        <nav class="">
-            <div class="container mx-auto max-w-6xl px-5 md:px-10 mb-10 py-7 flex items-center justify-between gap-10">
+        <nav class="fixed bg-white z-[10000] w-full">
+            <div class="container mx-auto max-w-6xl px-5 md:px-10 py-5 flex items-center justify-between gap-10">
                 <img src="./assets/images/logo wide.png" alt="DgnRavePay Logo" class="h-20">
                 <div class="hidden lg:flex flex-1 items-center justify-between">
                     <div class="bg-primary/70 rounded-full p-1">
@@ -33,7 +33,7 @@
                 </div>
             </div>
         </nav>
-        <div>
+        <div class="pt-40">
             <div class="container mx-auto max-w-6xl px-5 md:px-10">
                 <div class="text-center mb-10">
                     <h1
@@ -65,9 +65,9 @@
     <section class="pb-20">
         <div class="container mx-auto max-w-6xl px-5 md:px-10 py-10">
             <div class="md:grid md:grid-cols-2 md:items-center justify-between">
-                <h3 class="mb-3 text-3xl md:text-5xl lg:text-[48px] leading-[1]">Don’t Just Work. Disrupt.
+                <h2 class="mb-3 leading-[1.2]">Don’t Just Work. Disrupt.
                     Redefine Fintech with
-                    DgnRavePay.</h3>
+                    DgnRavePay.</h2>
                 <p class="md:font-medium text-base md:text-lg">We’re on a mission to break barriers in
                     digital payments,
                     savings, and global financial access. At DgnRavePay,
@@ -89,7 +89,7 @@
     <section class="py-20 bg-slate-200">
         <div class="container mx-auto max-w-6xl px-5 md:px-10 py-10">
             <div class="lg:grid lg:grid-cols-2 space-y-10 lg:space-y-0">
-                <h3 class="mb-3 text-3xl md:text-5xl lg:text-[48px] leading-[1]">Our core values</h3>
+                <h2 class="mb-3 leading-[1]">Our core values</h2>
                 <div class="grid md:grid-cols-2 gap-5">
                     <article class="rounded-xl bg-gradient-to-br from-amber-50 to-amber-200 overflow-hidden">
                         <div class="p-5 md:p-10">
@@ -142,7 +142,7 @@
     <section class="py-20">
         <div class="container mx-auto max-w-6xl px-5 md:px-10 py-10">
             <div class="lg:grid lg:grid-cols-2 space-y-10 lg:space-y-0">
-                <h3 class="mb-3 text-3xl md:text-5xl lg:text-[48px] leading-[1]">Perks we enjoy</h3>
+                <h2 class="mb-3 leading-[1]">Perks we enjoy</h2>
                 <div class="grid md:grid-cols-2 gap-5">
                     <article class="rounded-xl bg-gradient-to-br from-rose-50 to-rose-200">
                         <div class="p-5 md:p-7">
@@ -212,7 +212,7 @@
     <section class="py-20 bg-slate-200">
         <div class="container mx-auto max-w-6xl px-5 md:px-10 py-10">
             <div class="mb-10 px-5 md:px-10">
-                <h2 class="mb-3 text-3xl md:text-5xl lg:text-[48px] leading-[1]">
+                <h2 class="mb-3 leading-[1] text-center">
                     Your Next Big Career Move Starts Here
                 </h2>
                 <p class="text-center">
@@ -243,7 +243,7 @@
                 <!-- Header: Available Roles + badge -->
                 <div class="flex items-center justify-between mb-4">
                     <div class="flex items-center gap-3">
-                        <h2 class="text-base md:text-lg font-bold text-gray-800">Available Roles</h2>
+                        <h3 class="font-bold text-gray-800">Available Roles</h3>
                         <span
                             class="inline-flex items-center justify-center text-xs font-semibold bg-yellow-400 text-gray-900 px-2 py-1 rounded-full shadow-sm">93</span>
                     </div>
@@ -483,8 +483,8 @@
     <section class="bg-accent-black">
         <div class="container mx-auto max-w-6xl px-5 md:px-10">
             <div class="py-20 md:pt-28 flex flex-col justify-center text-center">
-                <h3 class="text-white mb-5 text-3xl md:text-5xl lg:text-[48px] leading-[1]">We’re just getting started
-                </h3>
+                <h2 class="text-white mb-5 leading-[1]">We’re just getting started
+                </h2>
                 <p class="text-white">
                     There’s so much we have to accomplish. Here are a few milestones we’ve crossed so far
                 </p>
@@ -524,8 +524,8 @@
             class="absolute -z-[1] blur-[3rem] w-full bottom-28 left-0">
         <div class="container mx-auto max-w-6xl px-5 md:px-10 py-20">
             <div class="text-center mb-20">
-                <h3 class="text-white mb-5 text-3xl md:text-5xl lg:text-[48px] leading-[1]">Do more with your Personal
-                    Account</h3>
+                <h2 class="text-white mb-5 leading-[1]">Do more with your Personal
+                    Account</h2>
                 <p class="text-white">Your lifestyle companion for smart payments, instant gifting, seamless travel, and
                     hassle-free bill management.</p>
                 <div class="mt-10">
