--- a/savings.html
+++ b/savings.html
@@ -11,8 +11,8 @@
 <body>
     <!-- HERO -->
     <section class="min-h-screen relative">
-        <nav class="">
-            <div class="container mx-auto max-w-6xl px-5 md:px-10 mb-10 py-7 flex items-center justify-between gap-10">
+        <nav class="fixed bg-white z-[10000] w-full">
+            <div class="container mx-auto max-w-6xl px-5 md:px-10 py-5 flex items-center justify-between gap-10">
                 <img src="./assets/images/logo wide.png" alt="DgnRavePay Logo" class="h-20">
                 <div class="hidden lg:flex flex-1 items-center justify-between">
                     <div class="bg-primary/70 rounded-full p-1">
@@ -33,11 +33,10 @@
                 </div>
             </div>
         </nav>
-        <div>
+        <div class="pt-40">
             <div class="container mx-auto max-w-6xl px-5 md:px-10">
                 <div class="text-center mb-10">
-                    <h1
-                        class="capitalize leading-[1.2] mb-5 text-center mb-5 text-5xl md:text-6xl lg:text-[74px] leading-[1]">
+                    <h1 class="capitalize leading-[1.2] mb-5 text-center mb-5">
                         Turn every Naira into
                         tomorrow’s possibilities.
                     </h1>
@@ -68,7 +67,7 @@
     <section class="my-30">
         <div class="container mx-auto max-w-6xl px-5 md:px-10">
             <div class="mb-10 px-5 md:px-10">
-                <h2 class="text-center mb-5 text-5xl md:text-6xl lg:text-[74px] leading-[1]">
+                <h2 class="text-center mb-5 leading-[1.2]">
                     Why People Choose DgnRavePay</h2>
                 <div class="grid md:grid-cols-3 gap-5 mt-10">
                     <div class="bg-primary rounded-xl">
@@ -104,7 +103,7 @@
     <section class="bg-accent-black relative -z-[0]">
         <div class="container mx-auto max-w-6xl px-5 md:px-10 py-20 md:py-28">
             <div class="text-center text-white">
-                <h2 class="text-white mb-5 text-3xl md:text-5xl lg:text-[48px] leading-[1.2]">
+                <h2 class="text-white mb-5 leading-[1.2]">
                     Find the Savings Plan That Works for You
                 </h2>
                 <p class="">Whether you’re saving for a dream, building financial discipline, or securing your future,
@@ -250,9 +249,9 @@
             <!-- JOIN SECTION -->
             <div class="md:grid md:grid-cols-5 md:gap-20">
                 <div class="md:col-span-3">
-                    <h2 class="mb-2 text-center md:text-left text-4xl md:text-5xl lg:text-[62px] leading-[1]">Join
+                    <h2 class="mb-2 text-center md:text-left leading-[1.2]">Join
                         DgnRavePay in 2 Minutes or Less</h2>
-                    <p class="text-center md:tet-left">No queues. No paperwork. Just you, your phone, and a few taps to
+                    <p class="text-center md:text-left">No queues. No paperwork. Just you, your phone, and a few taps to
                         financial freedom.</p>
                     <ul class="mt-3 max-w-2xl">
                         <li class="flex items-center px-5 py-5 rounded-xl gap-3">
@@ -544,8 +543,8 @@
             class="absolute -z-[1] blur-[3rem] w-full bottom-28 left-0">
         <div class="container mx-auto max-w-6xl px-5 md:px-10 py-20">
             <div class="text-center mb-20">
-                <h3 class="text-white mb-5 text-3xl md:text-5xl lg:text-[48px] leading-[1]">Do more with your Personal
-                    Account</h3>
+                <h2 class="text-white mb-5 text-3xl md:text-5xl lg:text-[48px] leading-[1]">Do more with your Personal
+                    Account</h2>
                 <p class="text-white">Your lifestyle companion for smart payments, instant gifting, seamless travel, and
                     hassle-free bill management.</p>
                 <div class="mt-10">
