--- a/virtual.html
+++ b/virtual.html
@@ -11,8 +11,8 @@
 <body>
     <!-- HERO -->
     <section class="min-h-screen relative">
-        <nav class="">
-            <div class="container mx-auto max-w-6xl px-5 md:px-10 mb-10 py-7 flex items-center justify-between gap-10">
+        <nav class="fixed bg-white z-[10000] w-full">
+            <div class="container mx-auto max-w-6xl px-5 md:px-10 py-5 flex items-center justify-between gap-10">
                 <img src="./assets/images/logo wide.png" alt="DgnRavePay Logo" class="h-20">
                 <div class="hidden lg:flex flex-1 items-center justify-between">
                     <div class="bg-primary/70 rounded-full p-1">
@@ -33,11 +33,10 @@
                 </div>
             </div>
         </nav>
-        <div>
+        <div class="pt-40">
             <div class="container mx-auto max-w-6xl px-5 md:px-10">
                 <div class="text-center mb-10">
-                    <h1
-                        class="capitalize leading-[1.2] mb-5 text-center mb-5 text-5xl md:text-6xl lg:text-[74px] leading-[1]">
+                    <h1 class="capitalize leading-[1.2] mb-5 text-center mb-5">
                         Spend worldwide, stay secure, with a dollar card that works.
                     </h1>
                     <p class="md:font-[500] md:text-lg lg:text-xl mb-10">Unlock global spending power with DgnRavePay s
@@ -65,7 +64,7 @@
     <section class="my-30">
         <div class="container mx-auto max-w-6xl px-5 md:px-10">
             <div class="mb-10 px-5 md:px-10">
-                <h2 class="text-center mb-5 text-5xl md:text-6xl lg:text-[74px] leading-[1]">Your Passport to Safe,
+                <h2 class="text-center mb-5 leading-[1.2]">Your Passport to Safe,
                     Smarter
                     Worldwide Spending</h2>
             </div>
@@ -73,11 +72,11 @@
     </section>
 
     <!-- Dark Section -->
-    <section class="bg-accent-black relative -z-[0]">
+    <section class="bg-accent-black">
         <div class="container mx-auto max-w-6xl px-5 md:px-10">
-            <div class="md:grid md:grid-cols-7 py-20">
+            <div class="grid md:grid-cols-7 gap-7 pt-20">
                 <div class="md:col-span-4">
-                    <h2 class="text-white mb-5 text-3xl md:text-5xl lg:text-[48px] leading-[1.2]">Why choose
+                    <h2 class="text-white mb-5 leading-[1.2]">Why choose
                         <span
                             class="text-transparent bg-clip-text bg-gradient-to-r from-slate-200 to-slate-400">DgnRavePay’s
                             virtual dollar</span>
@@ -162,23 +161,24 @@
                     <img src="./assets/images/woman hand.png" alt="" class="h-60 md:h-96 lg:h-[30rem]">
                 </div>
             </div>
-            <div class="py-20 flex flex-col items-center relative">
-                <div
-                    class="rounded-xl aspect-square inline-flex items-center justify-center p-3 mb-10 bg-white-/5 border border-white/10">
-                    <img src="./assets/images/logo.svg" alt="DgnRavePay’s Logo" class="h-8 md:h-10">
-                </div>
-                <h3 class="text-white text-center mb-3 text-3xl md:text-5xl lg:text-[48px] leading-[1]">
-                    Stay in control of every payment with your DgnRavePay Dollar Card.
-                </h3>
-                <div class="mt-10 text-center">
-                    <a href="#"
-                        class="bg-primary text-white py-2 px-4 md:py-4 md:px-5 hover:bg-primary/70 transition-all rounded-lg border-b-2 border-primary-2 md:text-base font-medium shadow-lg">
-                        Get Your Card Now
-                    </a>
-                </div>
-                <img src="./assets/images/vector line.svg" alt="vector line"
-                    class="absolute -z-[10] blur-[5rem] w-full bottom-30 left-0 -z-[1]">
+        </div>
+
+        <div class="bg-black/20 relative -z-[0] overflow-hidden py-20 flex flex-col items-center relative">
+            <div
+                class="rounded-xl aspect-square inline-flex items-center justify-center p-3 mb-10 bg-white-/5 border border-white/10">
+                <img src="./assets/images/logo.svg" alt="DgnRavePay’s Logo" class="h-8 md:h-10">
             </div>
+            <h3 class="text-white text-center mb-3 text-3xl md:text-5xl lg:text-[48px] leading-[1]">
+                Stay in control of every payment with your DgnRavePay Dollar Card.
+            </h3>
+            <div class="mt-10 text-center">
+                <a href="#"
+                    class="bg-primary text-white py-2 px-4 md:py-4 md:px-5 hover:bg-primary/70 transition-all rounded-lg border-b-2 border-primary-2 md:text-base font-medium shadow-lg">
+                    Get Your Card Now
+                </a>
+            </div>
+            <img src="./assets/images/vector line.svg" alt="vector line"
+                class="absolute -z-[10] blur-[5rem] w-full bottom-30 left-0 -z-[1]">
         </div>
     </section>
 
@@ -441,8 +441,8 @@
             class="absolute -z-[1] blur-[3rem] w-full bottom-28 left-0">
         <div class="container mx-auto max-w-6xl px-5 md:px-10 py-20">
             <div class="text-center mb-20">
-                <h3 class="text-white mb-5 text-3xl md:text-5xl lg:text-[48px] leading-[1]">Do more with your Personal
-                    Account</h3>
+                <h2 class="text-white mb-5 leading-[1.2]">Do more with your Personal
+                    Account</h2>
                 <p class="text-white">Your lifestyle companion for smart payments, instant gifting, seamless travel, and
                     hassle-free bill management.</p>
                 <div class="mt-10">
