--- a/about.html
+++ b/about.html
@@ -6,18 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Career Page DgnRavePay</title>
+    <script src="./assets/js/script.js" defer></script>
 </head>
 
 <body class="bg-accent-black text-white">
     <!-- HERO -->
     <section class="min-h-screen relative">
-        <nav class="">
-            <div class="container mx-auto max-w-6xl px-5 md:px-10 mb-10 py-7 flex items-center justify-between gap-10">
+        <nav class="fixed bg-accent-black z-[10000] w-full">
+            <div class="container mx-auto max-w-6xl px-5 md:px-10 py-5 flex items-center justify-between gap-10">
                 <img src="./assets/images/logo wide.png" alt="DgnRavePay Logo" class="h-20">
                 <div class="hidden lg:flex flex-1 items-center justify-between">
-                    <div class="bg-stone-500/20 rounded-full p-1">
-                        <button class="px-3 py-2 rounded-full text-white">For Individual</button>
-                        <button class="px-3 py-2 rounded-full bg-white text-stone-500">For Business</button>
+                    <div class="bg-primary/70 rounded-full p-1">
+                        <button class="px-3 py-2 rounded-full">For Individual</button>
+                        <button class="px-3 py-2 rounded-full bg-white text-black">For Business</button>
                     </div>
                     <ul class="font-medium flex gap-5">
                         <li class="">Product ></li>
@@ -33,12 +34,11 @@
                 </div>
             </div>
         </nav>
-        <div>
+        <div class="pt-40">
             <div class="container mx-auto max-w-6xl px-5 md:px-10">
                 <div class="text-center mb-10">
                     <span class="text-xs md:text-xs text-stone-500 uppercase">About us</span>
-                    <h1
-                        class="capitalize leading-[1.2] mt-2 mb-5 text-center mb-5 text-5xl md:text-6xl lg:text-[74px] leading-[1]">
+                    <h1 class="capitalize leading-[1.2] mt-2 mb-5 leading-[1]">
                         Redefining
                         <span class="bg-clip-text text-transparent bg-gradient-to-r from-primary to-primary-2">
                             Digital Finance
@@ -53,18 +53,26 @@
                 </div>
             </div>
         </div>
-        <div class="mx-auto max-w-7xl px-5 md:px-10 py-12 grid grid-cols-5 gap-3 md:gap-5 items-center">
-            <div class="flex gap-3 md:gap-5 flex-col">
+        <div class="overflow-hidden -z-[0] flex justify-center relative py-12 gap-3 md:gap-5 items-center">
+            <!-- <img src="./assets/images/article 3.jpg" alt="" id="aboutImgSlideLeft1"
+                class="object-cover w-[250px] absolute left-5 top-40 -z-[1] aspect-video rounded-md">
+            <img src="./assets/images/article 2.jpg" alt="" id="aboutImgSlideLeft2"
+                class="object-cover w-[170px] absolute left-16 top-80 -z-[1] aspect-[9/12] rounded-md"> -->
+            <div class="space-x-4 md:space-x-0 md:space-y-4 min-w-[200px] w-[200px]">
                 <img src="./assets/images/article 3.jpg" alt="" class="object-cover w-full aspect-video rounded-md">
-                <img src="./assets/images/article 2.jpg" alt="" class="object-cover w-full aspect-[9/10] rounded-md">
+                <img src="./assets/images/article 2.jpg" alt=""
+                    class="object-cover w-4/5 ml-auto aspect-video rounded-md">
             </div>
-            <img src="./assets/images/article 1.jpg" class="col-span-3 object-cover aspect-video w-full rounded-xl" />
-            <img src="./assets/images/article 3.jpg" alt="" class="object-cover w-full aspect-square rounded-lg">
+            <img src="./assets/images/article 1.jpg" id="aboutImgScroll"
+                class="object-cover aspect-video rounded-xl max-w-6xl w-[700px] transition transition-all" />
+            <img src="./assets/images/article 3.jpg" alt="" class="object-cover w-[200px] aspect-square rounded-lg">
+            <!-- <img src="./assets/images/article 3.jpg" alt="" id="aboutImgSlideRight"
+                class="object-cover w-[250px] absolute right-5 top-36 -z-[1] aspect-square rounded-lg"> -->
         </div>
     </section>
 
     <div class="my-20 md:mt-30 px-5 md:px-10">
-        <h2 class="mb-7 md:mb-10 text-3xl md:text-5xl lg:text-[48px] leading-[1] text-center">
+        <h2 class="mb-7 md:mb-10 leading-[1] text-center">
             Built for Trust. Designed for Growth
         </h2>
         <div class="grid md:grid-cols-4 gap-10 md:gap-5 items-center">
@@ -121,7 +129,7 @@
     <section class="my-20 md:mt-30">
         <div class="container mx-auto max-w-6xl px-5 md:px-10 py-10">
             <div class="lg:grid lg:grid-cols-2 space-y-10 lg:space-y-0">
-                <h3 class="mb-3 text-3xl md:text-5xl lg:text-[48px] leading-[1]">Our core values</h3>
+                <h2 class="mb-5 leading-[1]">Our core values</h2>
                 <div class="grid md:grid-cols-2 gap-5">
                     <article class="rounded-xl bg-gradient-to-br from-black/50 to-black/70 overflow-hidden">
                         <div class="p-5 md:p-10">
@@ -173,8 +181,7 @@
     <section class="">
         <div class="container mx-auto max-w-6xl px-5 md:px-10">
             <div class="py-20 flex flex-col justify-center text-center">
-                <h3 class="text-white mb-5 text-3xl md:text-5xl lg:text-[48px] leading-[1]">We’re just getting started
-                </h3>
+                <h2 class="text-white mb-5 leading-[1]">We’re just getting started</h2>
                 <p class="text-white">
                     There’s so much we have to accomplish. Here are a few milestones we’ve crossed so far
                 </p>
@@ -211,7 +218,7 @@
     <section class="container mx-auto max-w-6xl px-5 md:px-10 py-10 my-20 gap-10 grid md:grid-cols-2">
         <div class="rounded-xl overflow-hidden bg-gradient-to-b from-black to-stone-900 relative -z-[0]">
             <div class="p-5">
-                <h3 class="text-3xl md:text-4xl font-bold mb-2">Love to be a part of the team?</h3>
+                <h2 class="text-3xl md:text-4xl font-bold mb-2">Love to be a part of the team?</h2>
                 <p class="text-primary font-semibold">Explore Careers at DngRavePay</p>
             </div>
             <img src="./assets/images/lady with phone.png" alt="" class="mt-5 h-40 md:h-52 lg:h-64 mx-auto">
@@ -223,9 +230,9 @@
             </div>
             <img src="./assets/images/hand-card-grid-bg.png" alt="" class="w-full absolute top-0 left-0 -z-[1]">
         </div>
-        <div class="rounded-xl overflow-hidden bg-gradient-to-b from-primary to-stone-900 relative -z-[0]">
+        <div class="rounded-xl overflow-hidden bg-gradient-to-b from-primary to-primary-2/50 relative -z-[0]">
             <div class="p-5">
-                <h3 class="text-3xl md:text-4xl font-bold mb-2">Love to be a part of the team?</h3>
+                <h2 class="text-3xl md:text-4xl font-bold mb-2">Love to be a part of the team?</h2>
                 <p class="text-primary font-semibold">Explore Careers at DngRavePay</p>
             </div>
             <img src="./assets/images/lady with phone.png" alt="" class="mt-5 h-40 md:h-52 lg:h-64 mx-auto">
@@ -245,8 +252,8 @@
             class="absolute -z-[1] blur-[3rem] w-full bottom-28 left-0">
         <div class="container mx-auto max-w-6xl px-5 md:px-10 py-20">
             <div class="text-center mb-20">
-                <h3 class="text-white mb-5 text-3xl md:text-5xl lg:text-[48px] leading-[1]">Do more with your Personal
-                    Account</h3>
+                <h2 class="text-white mb-5 leading-[1]">Do more with your Personal
+                    Account</h2>
                 <p class="text-white">Your lifestyle companion for smart payments, instant gifting, seamless travel, and
                     hassle-free bill management.</p>
                 <div class="mt-10">
