--- a/career-detail.html
+++ b/career-detail.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
-<body class="bg-stone-50 text-stone-800">
-    <nav class="">
-        <div class="container mx-auto max-w-6xl px-5 md:px-10 py-5 md:py-7 flex items-center justify-between gap-10">
+<body class="text-stone-800">
+    <nav class="fixed w-full bg-white z-[1000]">
+        <div class="container mx-auto max-w-6xl px-5 md:px-10 py-5 flex items-center justify-between gap-10">
             <img src="./assets/images/logo wide.png" alt="DgnRavePay Logo" class="h-20">
             <div class="hidden lg:flex flex-1 items-center justify-between">
                 <div class="bg-primary/70 rounded-full p-1">
@@ -32,7 +32,7 @@
             </div>
         </div>
     </nav>
-    <div class="container mx-auto max-w-6xl px-5 md:px-10 pb-10 md:grid md:grid-cols-10 md:gap-5">
+    <div class="container mx-auto max-w-6xl px-5 md:px-10 pb-10 md:grid md:grid-cols-10 md:gap-5 pt-32 md:pt-40">
         <div class="col-span-3">
             <a href="#" class="flex items-center gap-2 text-primary font-semibold text-sm md:text-base">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -62,7 +62,7 @@
             <!-- Header Section -->
             <div class="mb-10">
                 <div>
-                    <h1 class="text-3xl md:text-4xl font-bold">Admin Officer (Kano)</h1>
+                    <h2 class="">Admin Officer (Kano)</h2>
                     <div class="flex items-center mt-5 gap-4">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                             stroke="currentColor" class="size-6 stroke-primary">
@@ -100,23 +100,23 @@
 
             <!-- Who we are Section -->
             <div class="mb-10">
-                <h2 class="text-xl font-semibold text-darkblue mb-4">Who we are</h2>
-                <p class="text-gray-600 leading-relaxed">
+                <h3 class="font-semibold text-darkblue mb-4">Who we are</h3>
+                <p class="text-gray-600 leading-relaxed mb-4">
                     Moniepoint is a financial technology company digitising Africa's real economy by building a
                     financial ecosystem for businesses, providing them with all the payment, banking, credit and
                     business
                     management tools they need to succeed.
                 </p>
-                <p class="text-primary italic leading-relaxed mt-4">
+                <a href="#" class="text-primary italic leading-relaxed">
                     Check out posts on how we cultivate a culture of innovation, teamwork, and growth.
-                </p>
+                </a>
             </div>
 
             <!-- About the role Section -->
             <div class="mb-10">
                 <h3 class="text-xl font-semibold mb-4">About the role</h3>
                 <div class="mb-10">
-                    <h3 class="font-medium text-gray-700">Location: <span class="text-gray-900">Kano</span></h3>
+                    <h4 class="font-medium text-gray-700">Location: <span class="text-gray-900">Kano</span></h4>
                 </div>
 
                 <div class="mb-10">
@@ -168,7 +168,7 @@
                             expatriates and international guests.</li>
                     </ul>
 
-                    <h4 class="font-medium text-gray-800 mt-6 mb-2">General:</h4>
+                    <h4 class="font-semibold text-gray-800 mt-6 mb-2">General:</h4>
                     <ul class="list-disc pl-5">
                         <li class="text-gray-600">Constantly communicating with all stakeholders to keep them updated,
                             including attending meetings and preparing regular reports for the management team.</li>
@@ -180,7 +180,7 @@
 
             <!-- Qualifications Section -->
             <div class="mb-10">
-                <h2 class="text-xl font-semibold text-darkblue mb-4">Qualifications, Competency & Skills Required</h2>
+                <h3 class="text-xl font-semibold text-darkblue mb-4">Qualifications, Competency & Skills Required</h3>
                 <ul class="list-disc pl-5">
                     <li class="text-gray-600">Graduate degree or equivalent qualification in Administration or Mass
                         Communications or minimum of three years previous travel, logistics, inventory management,
@@ -198,7 +198,7 @@
 
             <!-- Candidate Abilities Section -->
             <div class="mb-10">
-                <h2 class="text-xl font-semibold text-darkblue mb-4">Candidate Abilities & Personality Profile</h2>
+                <h3 class="text-xl font-semibold text-darkblue mb-4">Candidate Abilities & Personality Profile</h3>
                 <ul class="list-disc pl-5">
                     <li class="text-gray-600">An organised and assertive individual who is proactive, creative, and
                         resourceful.</li>
@@ -234,39 +234,42 @@
 
             <!-- What we offer Section -->
             <div class="mb-10">
-                <h2 class="text-xl font-semibold text-darkblue mb-4">What we can offer you</h2>
+                <h3 class="text-xl font-semibold text-darkblue mb-4">What we can offer you</h3>
 
                 <div class="mb-4">
-                    <h3 class="font-medium text-gray-800 mb-2">Culture</h3>
-                    <p class="text-gray-600">
-                        We put our people first and prioritize the well-being of every team member. We've built a
-                        company
-                        where all opinions carry weight and where all voices are heard. We value and respect each other
-                        and
-                        always look out for one another. Above all, we are human.
-                    </p>
+                    <h4 class="font-semibold text-gray-800 mb-2">Culture</h3>
+                        <p class="text-gray-600">
+                            We put our people first and prioritize the well-being of every team member. We've built a
+                            company
+                            where all opinions carry weight and where all voices are heard. We value and respect each
+                            other
+                            and
+                            always look out for one another. Above all, we are human.
+                        </p>
                 </div>
 
                 <div class="mb-4">
-                    <h3 class="font-medium text-gray-800 mb-2">Learning</h3>
-                    <p class="text-gray-600">
-                        We have a learning and development-focused environment with an emphasis on knowledge sharing,
-                        training, and regular internal technical talks.
-                    </p>
+                    <h4 class="font-semibold text-gray-800 mb-2">Learning</h3>
+                        <p class="text-gray-600">
+                            We have a learning and development-focused environment with an emphasis on knowledge
+                            sharing,
+                            training, and regular internal technical talks.
+                        </p>
                 </div>
 
                 <div>
-                    <h3 class="font-medium text-gray-800 mb-2">Compensation</h3>
-                    <p class="text-gray-600">
-                        You'll receive an attractive salary, pension, health insurance, Employee Stock Options, annual
-                        bonus, plus other benefits.
-                    </p>
+                    <h4 class="font-semibold text-gray-800 mb-2">Compensation</h3>
+                        <p class="text-gray-600">
+                            You'll receive an attractive salary, pension, health insurance, Employee Stock Options,
+                            annual
+                            bonus, plus other benefits.
+                        </p>
                 </div>
             </div>
 
             <!-- Hiring process Section -->
             <div class="mb-10">
-                <h2 class="text-xl font-semibold text-darkblue mb-4">What to expect in the hiring process</h2>
+                <h3 class="text-xl font-semibold text-darkblue mb-4">What to expect in the hiring process</h3>
                 <ul class="list-disc pl-5">
                     <li class="text-gray-600">A preliminary phone call with the Recruiter</li>
                     <li class="text-gray-600">An interview with the Hiring Manager</li>
