--- a/policy.html
+++ b/policy.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Contact Page DgnRavePay</title>
+    <title>Policy Page DgnRavePay</title>
 </head>
 
 <body>
     <!-- HERO -->
     <section class="relative">
-        <nav class="">
-            <div class="container mx-auto max-w-6xl px-5 md:px-10 mb-10 py-7 flex items-center justify-between gap-10">
+        <nav class="fixed bg-white z-[10000] w-full">
+            <div class="container mx-auto max-w-6xl px-5 md:px-10 py-5 flex items-center justify-between gap-10">
                 <img src="./assets/images/logo wide.png" alt="DgnRavePay Logo" class="h-20">
                 <div class="hidden lg:flex flex-1 items-center justify-between">
                     <div class="bg-primary/70 rounded-full p-1">
@@ -33,11 +33,11 @@
                 </div>
             </div>
         </nav>
-        <div>
+        <div class="pt-40">
             <div class="container mx-auto max-w-6xl px-5 md:px-14 lg:py-16">
                 <div class="text-center mb-10">
                     <h1
-                        class="capitalize leading-[1.2] mb-5 text-center mb-5 text-5xl md:text-6xl lg:text-[74px] leading-[1] bg-clip-text text-transparent bg-gradient-to-r from-black to-primary">
+                        class="capitalize leading-[1.2] mb-5 text-center mb-5 bg-clip-text text-transparent bg-gradient-to-r from-black to-primary">
                         Whistleblower Policy
                     </h1>
                 </div>
