--- a/press.html
+++ b/press.html
@@ -11,8 +11,8 @@
 <body>
     <!-- HERO -->
     <section class="relative">
-        <nav class="">
-            <div class="container mx-auto max-w-6xl px-5 md:px-10 mb-10 py-7 flex items-center justify-between gap-10">
+        <nav class="fixed bg-white z-[10000] w-full">
+            <div class="container mx-auto max-w-6xl px-5 md:px-10 py-5 flex items-center justify-between gap-10">
                 <img src="./assets/images/logo wide.png" alt="DgnRavePay Logo" class="h-20">
                 <div class="hidden lg:flex flex-1 items-center justify-between">
                     <div class="bg-primary/70 rounded-full p-1">
@@ -33,11 +33,11 @@
                 </div>
             </div>
         </nav>
-        <div>
+        <div class="pt-40">
             <div class="container mx-auto max-w-6xl px-5 md:px-14 lg:py-16">
                 <div class="text-center mb-10">
                     <h1
-                        class="capitalize leading-[1.2] mb-5 text-center mb-5 text-5xl md:text-6xl lg:text-[74px] leading-[1] bg-clip-text text-transparent bg-gradient-to-r from-black to-primary">
+                        class="capitalize leading-[1.2] mb-5 text-center mb-5 bg-clip-text text-transparent bg-gradient-to-r from-black to-primary">
                         DgnRavePay Brand & Media Resources
                     </h1>
                     <p class="font-medium text-base md:text-lg">
@@ -62,57 +62,58 @@
             </a>
             <ul class="mt-5 flex md:flex-col gap-3 text-xs md:text-sm mb-5 md:mb-0 p-5">
                 <li class="">
-                    <a href="#" class="text-blue-950 font-semibold">Logo</a>
+                    <a href="#" class="text-[#1a1a1c] font-semibold">Logo</a>
                 </li>
                 <li class="">
-                    <a href="#" class="text-blue-950 font-semibold">Team Pictures</a>
+                    <a href="#" class="text-[#1a1a1c] font-semibold">Team Pictures</a>
                 </li>
                 <li class="">
-                    <a href="#" class="text-blue-950 font-semibold">Product images</a>
+                    <a href="#" class="text-[#1a1a1c] font-semibold">Product images</a>
                 </li>
                 <li class="">
-                    <a href="#" class="text-blue-950 font-semibold">Featured businesses</a>
+                    <a href="#" class="text-[#1a1a1c] font-semibold">Featured businesses</a>
                 </li>
             </ul>
         </div>
         <div class="col-span-7">
-            <h2 class="font-bold text-blue-950 mb-6 md:md-10 text-3xl md:text-5xl lg:text-[48px] leading-[1]">Inside the
+            <h2 class="font-bold text-[#1a1a1c] mb-6 md:md-10 leading-[1]">Inside
+                the
                 news
             </h2>
             <div class="grid md:grid-cols-2 gap-5">
                 <article class="space-y-3">
-                    <img src="./assets/images/article 1.jpg" alt="" class="aspect-video rounded">
-                    <h6 class="font-bold text-blue-950 text-base md:text-lg">The ranking: Africa’s Fastest Growing
+                    <img src="./assets/images/article 1.jpg" alt="" class="aspect-video rounded object-cover">
+                    <h6 class="font-bold text-[#1a1a1c] text-base md:text-lg">The ranking: Africa’s Fastest Growing
                         Companies 2025</h6>
                     <p class="text-s md:text-sm text-stone-500">Punch Newspapers</p>
                 </article>
                 <article class="space-y-3">
-                    <img src="./assets/images/article 2.jpg" alt="" class="aspect-video rounded">
-                    <h6 class="font-bold text-blue-950 text-base md:text-lg">The ranking: Africa’s Fastest Growing
+                    <img src="./assets/images/article 2.jpg" alt="" class="aspect-video rounded object-cover">
+                    <h6 class="font-bold text-[#1a1a1c] text-base md:text-lg">The ranking: Africa’s Fastest Growing
                         Companies 2025</h6>
                     <p class="text-s md:text-sm text-stone-500">Punch Newspapers</p>
                 </article>
                 <article class="space-y-3">
-                    <img src="./assets/images/article 3.jpg" alt="" class="aspect-video rounded">
-                    <h6 class="font-bold text-blue-950 text-base md:text-lg">The ranking: Africa’s Fastest Growing
+                    <img src="./assets/images/article 3.jpg" alt="" class="aspect-video rounded object-cover">
+                    <h6 class="font-bold text-[#1a1a1c] text-base md:text-lg">The ranking: Africa’s Fastest Growing
                         Companies 2025</h6>
                     <p class="text-s md:text-sm text-stone-500">Punch Newspapers</p>
                 </article>
                 <article class="space-y-3">
-                    <img src="./assets/images/article 1.jpg" alt="" class="aspect-video rounded">
-                    <h6 class="font-bold text-blue-950 text-base md:text-lg">The ranking: Africa’s Fastest Growing
+                    <img src="./assets/images/article 1.jpg" alt="" class="aspect-video rounded object-cover">
+                    <h6 class="font-bold text-[#1a1a1c] text-base md:text-lg">The ranking: Africa’s Fastest Growing
                         Companies 2025</h6>
                     <p class="text-s md:text-sm text-stone-500">Punch Newspapers</p>
                 </article>
                 <article class="space-y-3">
-                    <img src="./assets/images/article 2.jpg" alt="" class="aspect-video rounded">
-                    <h6 class="font-bold text-blue-950 text-base md:text-lg">The ranking: Africa’s Fastest Growing
+                    <img src="./assets/images/article 2.jpg" alt="" class="aspect-video rounded object-cover">
+                    <h6 class="font-bold text-[#1a1a1c] text-base md:text-lg">The ranking: Africa’s Fastest Growing
                         Companies 2025</h6>
                     <p class="text-s md:text-sm text-stone-500">Punch Newspapers</p>
                 </article>
                 <article class="space-y-3">
-                    <img src="./assets/images/article 3.jpg" alt="" class="aspect-video rounded">
-                    <h6 class="font-bold text-blue-950 text-base md:text-lg">The ranking: Africa’s Fastest Growing
+                    <img src="./assets/images/article 3.jpg" alt="" class="aspect-video rounded object-cover">
+                    <h6 class="font-bold text-[#1a1a1c] text-base md:text-lg">The ranking: Africa’s Fastest Growing
                         Companies 2025</h6>
                     <p class="text-s md:text-sm text-stone-500">Punch Newspapers</p>
                 </article>
